# sgi_combing2d

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  launch.json
cmake/: FindMETIS.cmake  FindSuiteSparse.cmake  apt-dependencies.cmake  args.cmake  findNASOQ.cmake  json.cmake  nasoq.cmake  polyscope.cmake  tinyad.cmake
lib/implot/: implot.cpp
src/: PhysicsHook.h  Surface.cpp  Surface.h
src/ADWrapper/: ADFuncRunner.cpp  ADFuncRunner.h  ADFunc_TinyAD_Instance.h  LineSearch.cpp  LineSearch.h
tools/01_basic_test/: CMakeLists.txt
tools/01_basic_test/src/: VizHook.h  main.cpp
tools/02_tiny_ad_test/: CMakeLists.txt  README.md
tools/02_tiny_ad_test/src/: VizHook.h  main.cpp
tools/03_disk_bvp_v1/: CMakeLists.txt
tools/03_disk_bvp_v1/src/: VizHook.h
tools/04_adfunc_wrapper/: CMakeLists.txt  README.md
tools/04_adfunc_wrapper/src/: VizHook.h  main.cpp
